--- a/edition.html
+++ b/edition.html
@@ -12,7 +12,7 @@
 
 
 <figure>
-    <img src="C:\Users\Chandana\Desktop\HTML\image\lovely.jpeg.jpg" alt="beautiful lady" width="300" height="200"/>
+    <img src="lovely.jpeg.jpg" alt="beautiful lady" width="300" height="200"/>
     <figcaption>beautiful lady</figcaption>
 </figure>
 <br>
@@ -24,7 +24,7 @@
     <br>
 
 <figure>
-    <img src="C:\Users\Chandana\Desktop\HTML\image\cute.jpeg.jpg" alt="cute baby" width="200" height="300"/> 
+    <img src="cute.jpeg.jpg" alt="cute baby" width="200" height="300"/> 
     <figcaption>cute baby</figcaption>
 </figure>
     <a href="https://www.youtube.com">open youtube</a>
@@ -34,7 +34,7 @@
     <br>
 
 <video controls width="200px">
-    <source src="C:\Users\Chandana\Desktop\HTML\image\pareenita song.mp4" type="video/mp4">
+    <source src="pareenita song.mp4" type="video/mp4">
 </video>
 
 
@@ -42,7 +42,7 @@
 <br>
 
 <audio controls>
-    <source src="C:\Users\Chandana\Desktop\HTML\image\Sleep Away.mp3" type=audio/mp3>
+    <source src="Sleep Away.mp3" type=audio/mp3>
 </audio> 
 
 <br>
